Lista simple usando Kotlin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Kotlin Proyecto Base</string>
+    <string name="app_name">Kotlin Marvel Hero Finder</string>
 </resources>
